force-app/main/default/objects/SecondaryOrderLine__c/SecondaryOrderLine__c.object-meta.xml
<CustomObject>
    <label>Secondary Order Line</label>
    <pluralLabel>Secondary Order Lines</pluralLabel>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>Secondary Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SecondaryOrder__c</fullName>
        <label>Secondary Order</label>
        <referenceTo>SecondaryOrder__c</referenceTo>
        <relationshipLabel>Secondary Order Lines</relationshipLabel>
        <relationshipName>SecondaryOrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <required>true</required>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Secondary Order Lines</relationshipLabel>
        <relationshipName>SecondaryOrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QtyBase__c</fullName>
        <label>Qty Base</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyDisplay__c</fullName>
        <label>Qty Display</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>CTN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LineDiscount__c</fullName>
        <label>Line Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetLineAmount__c</fullName>
        <label>Net Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoLineRef__c</fullName>
        <label>Promo Line Ref</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchLot__c</fullName>
        <label>Batch Lot</label>
        <referenceTo>BatchLot__c</referenceTo>
        <relationshipLabel>Secondary Order Lines</relationshipLabel>
        <relationshipName>SecondaryOrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
</CustomObject>