force-app/main/default/objects/SecondaryOrderLine__c/fields/BatchLot__c.field-meta.xml
<CustomField>
    <fullName>BatchLot__c</fullName>
    <label>BatchLot</label>
    <referenceTo>BatchLot__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>