force-app/main/default/objects/SecondaryOrderLine__c/fields/LineDiscount__c.field-meta.xml
<CustomField>
    <fullName>LineDiscount__c</fullName>
    <label>LineDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>