force-app/main/default/objects/SecondaryOrderLine__c/fields/NetLineAmount__c.field-meta.xml
<CustomField>
    <fullName>NetLineAmount__c</fullName>
    <label>Net Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>