force-app/main/default/objects/SecondaryOrderLine__c/fields/PromoLineRef__c.field-meta.xml
<CustomField>
    <fullName>PromoLineRef__c</fullName>
    <label>PromoLineRef</label>
    <length>64</length>
    <type>Text</type>
</CustomField>