force-app/main/default/objects/SecondaryOrderLine__c/fields/QtyBase__c.field-meta.xml
<CustomField>
    <fullName>QtyBase__c</fullName>
    <label>QtyBase</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>