force-app/main/default/objects/SecondaryOrderLine__c/fields/QtyDisplay__c.field-meta.xml
<CustomField>
    <fullName>QtyDisplay__c</fullName>
    <label>QtyDisplay</label>
    <length>32</length>
    <type>Text</type>
</CustomField>