force-app/main/default/objects/SecondaryOrderLine__c/fields/SecondaryOrder__c.field-meta.xml
<CustomField>
    <fullName>SecondaryOrder__c</fullName>
    <label>Secondary Order</label>
    <referenceTo>SecondaryOrder__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>OrderLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>