force-app/main/default/objects/SecondaryOrderLine__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
                <default>False</default>
                <label>EA</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <default>False</default>
                <label>CS</label>
            </value>
            <value>
                <fullName>PK</fullName>
                <default>False</default>
                <label>PK</label>
            </value>
            <value>
                <fullName>PLT</fullName>
                <default>False</default>
                <label>PLT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>